# sppo

./: README.md
1/bd/: new.drawio
2/: Writing 2.docx
2/algos/: queue.cpp  test.cpp  tim_1005.cpp  tim_1155.cpp  tim_1160.cpp  tim_1207.cpp  tim_1329.cpp  tim_1444.cpp  tim_1494.cpp  tim_1521.cpp  vector.cpp  yk_a.cpp  yk_b.cpp  yk_c.cpp  yk_d.cpp  yk_e.cpp  yk_f.cpp  yk_g.cpp  yk_h.cpp  yk_i.cpp  yk_j.cpp  yk_k.cpp  yk_l.cpp  yk_m.cpp  yk_n.cpp  yk_o.cpp  yk_p.cpp
2/mat/: lab1.py
2/opi/: lab3.rar
2/phys/: 4lab.docx  Копия 1.03.xlsx
2/stat/: 1.py  2-1.py  2-2.py  hm1-1.py  hm2-1.py  hm2-2.py  hm3.py  hm4.docx  hm4.py  hm5-1.py  hm5-2.py  hm6-13.py  hm6-14.py  hm6-16.py
2/yap/3lab/assignment-3/solution/: CMakeLists.txt
2/yap/3lab/assignment-3/solution/src/: bmp.c  bmp.h  image.h  main.c  transformation.c  transformation.h  util.c  util.h
3/cn/: hm1.docx  ~$hm1.docx
3/osi/: exam.rar
3/rshd/: P3319_Билобрам_ЛАБ1.docx  P3319_Билобрам_ЛАБ2.docx  P3319_Билобрам_ЛАБ3.docx
3/sii/: ~$И P3319 Отчёт 1.docx  СИИ P3319 Отчёт 1.docx
3/tpo/: P3319_Билобрам_ЛАБ1.docx  ~$319_Билобрам_ЛАБ1.docx  ~$О_ЛР2_P3319_Билобрам.docx  ТПО_ЛР1_P3319_Билобрам.docx  ТПО_ЛР2_P3319_Билобрам.docx
bd/: data.sql
bd/lab1/: data.sql  model.drawio  sql.sql
bd/lab2/: sciprt.sql
infa/lab 5/: main.xlsx
infa/lab1/: P3119 Информатика ЛБ2 Билобрам Д.А.docx  task.py
infa/lab3/: 3.py
infa/lab4/: json.json
mat/lab1/: lab1.py
opd/lab1/: myscr  ~$119 ОПД Билобрам Д.А ЛАБ1.docx  З3119 ОПД Билобрам Д.А ЛАБ1.docx
proga/lab1/: MANIFEST.MF  Program.java  Program1.java  program.java  (+2 more)
(+1269 files in other folders)
